test/libyul/yulSyntaxTests/loadimmutable_shadowing.yul
{
    function loadimmutable(a) {}
}
// ====
// dialect: evm
// ----
// ParserError 5568: (15-28): Cannot use reserved name "loadimmutable" as identifier name.
